--- a/Task1_PUT.ipynb
+++ b/Task1_PUT.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Here our goal is to transfer all the product entries that we have to our postgresql database using our app.\n",
+    "## Let us start by importing all the required libraries\n",
+    "\n",
     "import requests\n",
     "import pandas as pd\n",
     "import json\n",
@@ -18,6 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## We will read the file provided into data \n",
+    "\n",
     "data = pd.read_csv(\"Greendeck SE Assignment Task 1.csv\", encoding= 'unicode_escape')"
    ]
   },
@@ -165,7 +170,9 @@
     }
    ],
    "source": [
-    "data.head()"
+    "## We check how our data looks like\n",
+    "\n",
+    "data.head() "
    ]
   },
   {
@@ -174,6 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Now using the POST method, we will add all the entries one-by-one to our database. We create a dictionary in the\n",
+    "# required format and pass it to our POST request.\n",
+    "\n",
     "for i in np.arange(len(data)):\n",
     "    response = requests.post(\"http://127.0.0.1:5000/data\", json = {\n",
     "        \"brand_name\": data['brand_name'][i],\n",
@@ -189,13 +199,6 @@
     "        \"regular_price_value\": data['regular_price_value'][i]\n",
     "    })"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
